--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,19 @@
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
    
+    <style>
+      /* * {
+        margin:0;
+      } */
+
+      .link {
+        text-decoration: none;
+        color:inherit;
+      }
+    </style>
+
     <title>React Blog App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
